<resources>
    <string name="app_name">Weather</string>
    <string name="Country_iso_code">Country ISO code</string>
    <string name="City_name">City name</string>
    <string name="Get_info">GET INFO</string>
    <string name="Temperature">Temperature</string>
    <string name="Current">Current</string>
    <string name="Minimum">Minimum</string>
    <string name="Maximum">Maximum</string>
</resources>