<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tree_dark_cloud_extreme_weather_4k_ultra_hd_mobile_wallpaper"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/IsoCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Country_iso_code"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/txtCountryISOCode"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CityName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/City_name"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/txtCityName"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:orientation="vertical">

            <Button
                android:id="@+id/GetInfo"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:backgroundTint="#F4EFEF"
                android:text="@string/Get_info"
                android:textColor="#212121" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Temperature"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Temperature"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Current"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/Current"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/CurrentResult"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Minimum"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Minimum"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/MinimalResult"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:gravity="center|center_horizontal|center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Maximum"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Maximum"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/MaximunResult"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>